feat: new functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.defaultFormatter": "julialang.language-julia"
+    "editor.defaultFormatter": "0h7z.vscode-julia-format",
+    "workbench.colorTheme": "Darcula",
+    "window.autoDetectColorScheme": false,
+    "editor.formatOnSave": true
 }
