--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "editor.defaultFormatter": "julialang.language-julia",
-  "window.autoDetectColorScheme": false,
-  "editor.formatOnSave": true
+    "editor.defaultFormatter": "0h7z.vscode-julia-format",
+    "workbench.colorTheme": "Darcula",
+    "window.autoDetectColorScheme": false,
+    "editor.formatOnSave": true
 }
